--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,26 @@
 /*  your css code here. If applicable */
+.container{
+	display:flex;
+	width:500px;
+	height:100px;
+	border: 4px solid black;
+	border-radius:25px;
+	justify-content:space-evenly;
+	align-items:center;
+	background-color:grey
+}
+.light{
+	width:50px;
+	height:50px;
+	border:4px solid black;
+	border-radius:50px
+}
+#red{
+	background-color:red;
+}
+#yellow{
+	background-color:yellow;
+}
+#green{
+	background-color:green;
+}
