--- a/styles.css
+++ b/styles.css
@@ -15,12 +15,12 @@
 	border:4px solid black;
 	border-radius:50px
 }
-#red{
+.red{
 	background-color:red;
 }
-#yellow{
+.yellow{
 	background-color:yellow;
 }
-#green{
+.green{
 	background-color:green;
 }
